--- a/templates/front/baseFront.html.twig
+++ b/templates/front/baseFront.html.twig
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
 	<head>
+		@import "compass/css3";
+
 		<meta charset="UTF-8">
 		<meta name="description" content="games">
 		<meta name="keywords" content="Amin, unica, creative, html">
@@ -16,7 +18,7 @@
 			{% endblock %}
 		</title>
 		{# Run `composer require symfony/webpack-encore-bundle`
-																																																														           and uncomment the following Encore helpers to start using Symfony UX #}
+																																           and uncomment the following Encore helpers to start using Symfony UX #}
 		{% block stylesheets %}
 			<!-- Css Styles -->
 			<link rel="stylesheet" href="{{asset('front/assets/css/chat.css')}}" type="text/css">
@@ -28,13 +30,14 @@
 			<link rel="stylesheet" href="{{asset('front/assets/css/magnific-popup.css')}}" type="text/css">
 			<link rel="stylesheet" href="{{asset('front/assets/css/slicknav.min.css')}}" type="text/css">
 			<link rel="stylesheet" href="{{asset('front/assets/css/style.css')}}" type="text/css">
+			<link rel="stylesheet" href="{{ asset('bundles/starrating/css/rating.css') }}" type="text/css"  />
 		{% endblock %}
 
 		{% block javascripts %}
 			{#{{ encore_entry_script_tags('app') }}#}
 		{% endblock %}
 	</head>
-	<body>
+	<body onKeyDown="pegadirecao(event.keyCode);">
 		<!-- Page Preloder -->
 		<div id="preloder">
 			<div class="loader"></div>
@@ -186,11 +189,7 @@
 										Apr 08, 2022</li>
 									<li class="signup-switch signup-open">
 										<i class="fa fa-sign-out"></i>
-										Sign up
-									</li>
-									<li class="login-switch signup-open">
-										<i class="fa fa-sign-out"></i>
-										Login
+										Login / Sign up
 									</li>
 								</ul>
 							</div>
@@ -253,22 +252,22 @@
 								<div class="megamenu-wrapper">
 									<ul class="mw-nav">
 										<li>
-											<a href="#">
-												<span>Tick Tack Toe</span>
-											</a>
-										</li>
-										<li>
-											<a href="#">
+											<a href="/game/game1">
 												<span>Snake</span>
 											</a>
 										</li>
 										<li>
-											<a href="#">
+											<a href="/game/game2">
+												<span>Racing</span>
+											</a>
+										</li>
+										<li>
+											<a href="/game/game3">
 												<span>Super Mario</span>
 											</a>
 										</li>
 										<li>
-											<a href="#">
+											<a href="/game/game4">
 												<span>Tetris</span>
 											</a>
 										</li>
@@ -276,11 +275,11 @@
 									<div class="mw-post">
 										<div class="mw-post-item">
 											<div class="mw-pic">
-												<img src="{{asset('front/assets/img/megamenu/mm-1.jpg')}}" alt="">
+												<img src="{{asset('/front/assets/img/snake.png')}}" alt="">
 											</div>
 											<div class="mw-text">
 												<h6>
-													<a href="#">Tik tak toe</a>
+													<a href="/game/game1">Snake l 7nach</a>
 												</h6>
 												<ul>
 													<li>
@@ -294,11 +293,11 @@
 										</div>
 										<div class="mw-post-item">
 											<div class="mw-pic">
-												<img src="{{asset('front/assets/img/megamenu/mm-2.jpg')}}" alt="">
+												<img src="{{asset('/front/assets/img/racing.jpg')}}" alt="">
 											</div>
 											<div class="mw-text">
 												<h6>
-													<a href="#">Snake</a>
+													<a href="/game/game2">Snake</a>
 												</h6>
 												<ul>
 													<li>
@@ -312,11 +311,11 @@
 										</div>
 										<div class="mw-post-item">
 											<div class="mw-pic">
-												<img src="{{asset('front/assets/img/megamenu/mm-3.jpg')}}" alt="">
+												<img src="{{asset('/front/assets/img/mario.jpg')}}" alt="">
 											</div>
 											<div class="mw-text">
 												<h6>
-													<a href="#">Super Mario</a>
+													<a href="/game/game3">Super Mario</a>
 												</h6>
 												<ul>
 													<li>
@@ -330,11 +329,11 @@
 										</div>
 										<div class="mw-post-item">
 											<div class="mw-pic">
-												<img src="{{asset('front/assets/img/megamenu/mm-4.jpg')}}" alt="">
+												<img src="{{asset('/front/assets/img/Tetris.jpg')}}" alt="">
 											</div>
 											<div class="mw-text">
 												<h6>
-													<a href="#">Tetris</a>
+													<a href="/game/game4">Tetris</a>
 												</h6>
 												<ul>
 													<li>
@@ -508,7 +507,7 @@
 										document.write(new Date().getFullYear());
 									</script>
 									All rights reserved | This
-																																																																																																																																																																											                                template is made with
+																																				                                template is made with
 									<i class="fa fa-heart" aria-hidden="true"></i>
 									by
 									<a href="https://colorlib.com" target="_blank">Reality Vision</a>
@@ -541,17 +540,17 @@
 						<h2>Sign up</h2>
 						<p>Fill out the form below to recieve a free and confidential</p>
 					</div>
-					<form method="POST" action="{{path('signup')}}" class="signup-form">
+					<form action="#" class="signup-form">
 						<div class="sf-input-list">
-							<input type="text" class="input-value" placeholder="User Name*" name="login" required>
-							<input type="text" class="input-value" placeholder="Name" name="name" required>
-							<input type="text" class="input-value" placeholder="Last Name" name="last_name" required>
-							<input type="text" class="input-value" placeholder="Email Address" name="Email" required>
-							<input type="password" class="input-value" placeholder="Password" name="password" required>
+							<input type="text" class="input-value" placeholder="User Name*">
+							<input type="text" class="input-value" placeholder="Password">
+							<input type="text" class="input-value" placeholder="Confirm Password">
+							<input type="text" class="input-value" placeholder="Email Address">
+							<input type="text" class="input-value" placeholder="Full Name">
 						</div>
 						<div class="radio-check">
 							<label for="rc-agree">I agree with the term & conditions
-								<input type="checkbox" id="rc-agree" required>
+								<input type="checkbox" id="rc-agree">
 								<span class="checkbox"></span>
 							</label>
 						</div>
@@ -563,29 +562,7 @@
 			</div>
 		</div>
 		<!-- Sign Up Section End -->
-		<!-- login Section Begin -->
-		<div class="login-section">
-			<div class="login-close">
-				<i class="fa fa-close"></i>
-			</div>
-			<div class="signup-text">
-				<div class="container">
-					<div class="signup-title">
-						<h2>WELCOME BACK</h2>
-						<p>Welcome back! Please enter your details.</p>
-					</div>
-					<form method="POST" action="{{path('login')}}" class="signup-form">
-						<div class="sf-input-list">
-							<input type="text" class="input-value" placeholder="User Name*" name="username" required>
-							<input type="password" class="input-value" placeholder="Password" name="password" required>
-						</div>
-						<button type="submit">
-							<span>LOGIN</span>
-						</button>
-					</form>
-				</div>
-			</div>
-		</div>
+
 		<!-- Search model Begin -->
 		<div class="search-model">
 			<div class="h-100 d-flex align-items-center justify-content-center">
