--- a/templates/game/_form.html.twig
+++ b/templates/game/_form.html.twig
@@ -1,4 +1,190 @@
-{{ form_start(form) }}
-    {{ form_widget(form) }}
-    <button class="btn">{{ button_label|default('Save') }}</button>
+<div class="form">
+    {{ form_start(form) }}
+
+    <div class="input-container ic1">
+       {{ form_widget(form.title, {'attr': {'class': 'input', 'placeholder': ' '}}) }}
+
+        <div class="cut cut-short"></div>
+        <label  class="placeholder">Title</label>
+    </div>
+    <div class="input-container ic2">
+        {{ form_widget(form.description, {'attr': {'class': 'input', 'placeholder': ' '}}) }}
+        <div class="cut"></div>
+        <label for="game_description" class="placeholder">Description</label>
+    </div>
+    <div class="input-container ic2">
+        {{ form_widget(form.size, {'attr': {'class': 'input', 'placeholder': ' '}}) }}
+        <div class="cut cut-short"></div>
+        <label for="game_size" class="placeholder">Size</label>
+    </div>
+    <div class="input-container ic2">
+        {{ form_widget(form.imageFile, {'attr': {'class': 'input', 'placeholder': ' '}}) }}
+        <div class="cut"></div>
+        <label for="game_imageFile" class="placeholder">Image File</label>
+    </div>
+    <div class="input-container ic2">
+        {{ form_widget(form.rate, {'attr': {'class': 'input', 'placeholder': ' '}}) }}
+        <div class="cut cut-short"></div>
+        <label for="game_rate" class="placeholder">Rate</label>
+    </div>
+    <div class="input-container ic2">
+        {{ form_widget(form.rateNbr, {'attr': {'class': 'input', 'placeholder': ' '}}) }}
+        <div class="cut"></div>
+        <label for="game_rateNbr" class="placeholder">Rate number</label>
+    </div>
+    <div class="input-container ic2">
+        {{ form_widget(form.category, {'attr': {'class': 'input', 'placeholder': ' '}}) }}
+        <div class="cut"></div>
+        <label for="game_category" class="placeholder">Category</label>
+    </div>
+    <button class="submit">{{ button_label|default('ADD') }}</button>
+    <a class="buttonn" href="{{ path('app_game_index') }}">back to list</a>
+</div>
+
+<style>
+    body {
+        align-items: center;
+        background-color: #000;
+        display: flex;
+        justify-content: center;
+        height: 100vh;
+    }
+
+    .form {
+        background-color: #444958;
+        border-radius: 30px;
+        box-sizing: border-box;
+        height: 650px;
+        padding: 20px;
+        width: 450px;
+        margin-left: 500px;
+        margin-top: 10px;
+    }
+
+    .title {
+        color: #eee;
+        font-family: sans-serif;
+        font-size: 36px;
+        font-weight: 600;
+        margin-top: 30px;
+    }
+
+    .subtitle {
+        color: #eee;
+        font-family: sans-serif;
+        font-size: 16px;
+        font-weight: 600;
+        margin-top: 10px;
+    }
+
+    .input-container {
+        height: 50px;
+        position: relative;
+        width: 100%;
+    }
+
+    .ic1 {
+        margin-top: 40px;
+    }
+
+    .ic2 {
+        margin-top: 30px;
+    }
+
+    .input {
+        background-color: #303245;
+        border-radius: 12px;
+        border: 0;
+        box-sizing: border-box;
+        color: #eee;
+        font-size: 18px;
+        height: 100%;
+        outline: 0;
+        padding: 4px 20px 0;
+        width: 100%;
+    }
+
+    .cut {
+        background-color: #15172b;
+        border-radius: 10px;
+        height: 20px;
+        left: 20px;
+        position: absolute;
+        top: -20px;
+        transform: translateY(0);
+        transition: transform 200ms;
+        width: 76px;
+    }
+
+    .cut-short {
+        width: 50px;
+    }
+
+    .input:focus ~ .cut,
+    .input:not(:placeholder-shown) ~ .cut {
+        transform: translateY(8px);
+    }
+
+    .placeholder {
+        color: #65657b;
+        font-family: sans-serif;
+        left: 20px;
+        line-height: 14px;
+        pointer-events: none;
+        position: absolute;
+        transform-origin: 0 50%;
+        transition: transform 200ms, color 200ms;
+        top: 20px;
+    }
+
+    .input:focus ~ .placeholder,
+    .input:not(:placeholder-shown) ~ .placeholder {
+        transform: translateY(-30px) translateX(10px) scale(0.75);
+    }
+
+    .input:not(:placeholder-shown) ~ .placeholder {
+        color: #808097;
+    }
+
+    .input:focus ~ .placeholder {
+        color: #dc2f55;
+    }
+
+    .submit {
+        background-color: #08d;
+        border-radius: 12px;
+        border: 0;
+        box-sizing: border-box;
+        color: #eee;
+        cursor: pointer;
+        font-size: 18px;
+        height: 50px;
+        margin-top: 25px;
+    // outline: 0;
+        text-align: center;
+        width: 50%;
+        text-decoration: none;
+        text-transform: uppercase;
+    }
+
+    .submit:active {
+        background-color: #06b;
+
+    }
+    .buttonn {
+        border-radius: 12px;
+        background-color: #8482a3;
+        color: white;
+        padding: 1em 1.5em;
+        text-decoration: none;
+        text-transform: uppercase;
+        margin-left: 50px;
+
+    }
+
+</style>
+
+
+
+
 {{ form_end(form) }}
