--- a/templates/user/_form.html.twig
+++ b/templates/user/_form.html.twig
@@ -1,12 +1,4 @@
-<div class="row justify-content-center">
-
-
-	{{ form_start(form) }}
-	{{ form_widget(form) }}
-
-	<button class="btn btn-success btn-xs">
-		{{ button_label|default('Save') }}
-	</button>
-	{{ form_end(form) }}
-
-</div>
+{{ form_start(form) }}
+    {{ form_widget(form) }}
+    <button class="btn">{{ button_label|default('Save') }}</button>
+{{ form_end(form) }}
