--- a/templates/user/edit.html.twig
+++ b/templates/user/edit.html.twig
@@ -1,14 +1,13 @@
-{% extends 'admin/baseAdmin.html.twig' %}
+{% extends 'base.html.twig' %}
 
-{% block title %}Edit User
-{% endblock %}
+{% block title %}Edit User{% endblock %}
 
 {% block body %}
-	<hh4 style="color: white;">Edit User</h4>
+    <h1>Edit User</h1>
 
-	{{ include('user/_form.html.twig', {'button_label': 'Update'}) }}
+    {{ include('user/_form.html.twig', {'button_label': 'Update'}) }}
 
-	<a href="{{ path('app_user_index')}}" class="btn btn-secondary btn-xs">back to list
-	</a>
+    <a href="{{ path('app_user_index') }}">back to list</a>
 
+    {{ include('user/_delete_form.html.twig') }}
 {% endblock %}
