--- a/templates/admin/store.html.twig
+++ b/templates/admin/store.html.twig
@@ -8,12 +8,13 @@
 		<a class="btn btn-dark" href="{{ path('app_commande_index') }}"> Order list </a>
 		<a class="btn btn-dark" href="{{ path('app_produit2_new') }}">  Create new </a>
 		<a class="btn btn-dark" href="{{  path('app_category_p_new')}}">  Category </a>
+        <a class="btn btn-dark" href="{{  path('app_produit2_index')}}">  GO TO FRONT </a>
 
 
 
 		<div class="row" style="margin-top: 30px;">
 			<div class="col-11">
-				<a href="{{ path('app_produit2_new') }}" class="btn btn-success btn-xs pull-right" data-toggle="modal" data-target="#AddModal">Add new product</a>
+				<a href="{{ path('app_produit2_new') }}" class="btn btn-success btn-xs pull-right">Add new product</a>
 			</div>
 		</div>
 		<div>
