--- a/templates/produit2/new.html.twig
+++ b/templates/produit2/new.html.twig
@@ -6,5 +6,6 @@
 
     {{ include('produit2/_form.html.twig') }}
 
-    <a style="color: transparent" href="{{ path('app_produit2_index') }}">back to list</a>
+    <a style="color: transparent" href="{{ path('app_produit2_index2') }}">back to list</a>
+    <a class="btn btn-dark" href="{{  path('app_produit2_index')}}">  GO TO FRONT </a>
 {% endblock %}
