--- a/templates/admin/baseAdmin.html.twig
+++ b/templates/admin/baseAdmin.html.twig
@@ -104,6 +104,16 @@
 
 								</li>
 								<li>
+								<li>
+									<!-- RECOMENDED GAMES -->
+									<a href="{{ path('app_recomendedg_index') }}" aria-expanded="true">
+										<i class="fa fa-credit-card"></i>
+										<span>Recomended Games</span>
+									</a>
+
+								</li>
+
+								<li>
 									<!-- Orderssssssss -->
 									<a href="orders.html" aria-expanded="true">
 										<i class="fa fa-credit-card"></i>
